fix console clear